# fieldcraft

./: DISCLAIMER.md  README.md  build_wiki.py  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
data/: acronyms.json  checklists.json  military_guides.json  resources.json
data/equipment/: air-defense.json  aircraft-fixed-wing.json  aircraft-rotary.json  armored-vehicles.json  artillery.json  c2-ew-sensors.json  conflict-gear-index.json  crew-served.json  individual-kit.json  missiles.json  naval.json  small-arms.json  uas.json
docs/: HOME.md  acronyms.md  camouflage-concealment.md  cbrn.md  comms.md  environment.md  equipment.md  field-hygiene.md  food-water.md  gear.md  land-nav.md  lessons.md  medical.md  mil-reference.md  night.md  preparedness.md  roles-loadouts.md  rucking.md  sop.md  survival.md  tactical-fitness.md  tools.md
examples/: help.txt  version.txt
fieldcraft/: __init__.py  acronyms.py  catalog.py  cli.py  equipment.py  lessons.py  loadouts.py  sop.py  sources.py
tests/: test_equipment.py  test_os.py  test_smoke.py
